--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -96,11 +96,11 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Orders</span>
                 </a>
-                <a href="/admin/coupons" class="nav-item">
+                <a href="/admin/coupon" class="nav-item">
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
-                <a href="/admin/sales" class="nav-item">
+                <a href="/admin/salesreport" class="nav-item">
                     <i class="fas fa-chart-line"></i>
                     <span>Sales</span>
                 </a>
