--- a/views/user/editAddress.ejs
+++ b/views/user/editAddress.ejs
@@ -41,7 +41,7 @@
           </li>
         
           <li class="sidebar-item">
-            <a href="#" class="flex items-center p-3 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
+            <a href="/wallet" class="flex items-center p-3 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
               <i class="fas fa-wallet text-blue-500 mr-4 transform transition-transform group-hover:scale-110 group-hover:rotate-6"></i>
               <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold transition-all">Wallet</span>
             </a>
@@ -52,12 +52,7 @@
               <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold transition-all">Order</span>
             </a>
           </li>
-          <li class="sidebar-item">
-            <a href="#" class="flex items-center p-3 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
-              <i class="fas fa-heart text-blue-500 mr-4 transform transition-transform group-hover:scale-110 group-hover:rotate-6"></i>
-              <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold transition-all">Wishlist</span>
-            </a>
-          </li>
+       
           <li class="sidebar-item">
             <a href="#" class="flex items-center p-3 rounded-lg group transition-all duration-300 hover:bg-red-50 hover:shadow-md">
               <i class="fas fa-sign-out-alt text-red-500 mr-4 transform transition-transform group-hover:scale-110 group-hover:rotate-6"></i>
