--- a/views/admin/viewOrderList.ejs
+++ b/views/admin/viewOrderList.ejs
@@ -201,7 +201,7 @@
 
 
 .btn-primary {
-    background-color: #4CAF50; /* Green color */
+    background-color: #4CAF50; 
     border: none;
     padding: 12px 30px;
     font-size: 16px;
@@ -251,11 +251,11 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Orders</span>
                 </a>
-                <a href="/admin/coupons" class="nav-item">
+                <a href="/admin/coupon" class="nav-item">
                     <i class="fas fa-tags"></i>
                     <span>Coupons</span>
                 </a>
-                <a href="/admin/sales" class="nav-item">
+                <a href="/admin/salesreport" class="nav-item">
                     <i class="fas fa-chart-line"></i>
                     <span>Sales</span>
                 </a>
