--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -20,7 +20,7 @@
       <div class="col-span-1 bg-white border border-blue-100 p-6 rounded-xl shadow-lg">
         <ul class="space-y-6">
           <li>
-            <a href="#" class="flex items-center p-4 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
+            <a href="/profile" class="flex items-center p-4 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
               <i class="fas fa-user text-blue-500 mr-4 group-hover:scale-110 group-hover:rotate-6"></i>
               <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold">Profile</span>
             </a>
