--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -46,7 +46,7 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Sales</span>
                 </a>
-                <a href="/admin/banners" class="nav-item">
+                <a href="/admin/offer" class="nav-item">
                     <i class="fas fa-image"></i>
                     <span>Banners</span>
                 </a>
